# telegram-organizer

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/rules/: ai_processing.mdc  database_ops.mdc  error_handling.mdc  performance.mdc  security.mdc  telegram_integration.mdc
src/: ai.rs  database.rs  main.rs  scheduler.rs  telegram.rs
